--- a/style.css
+++ b/style.css
@@ -1,34 +1,53 @@
-body{
-    margin: 0px;
-    padding: 0px;
-}
-.menu{
-    border-bottom: 4px solid #999999;
-    background-color:#CC0000;
+html,body{
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-.presentation-texte,.presentation-entrainement, .section{
-    border: 2px solid #999999;
-    background-color:#CC0000;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
+body{
+    min-height: 100%;
+    margin: 0 auto;
+    background-color: #DCDCDC;
 }
+
+.centre_site{
+    padding: 10px 20px;
+    margin: 30px 150px;
+}
+
+.menu,.presentation-texte,.presentation-entrainement, .section{
+    background-color: rgba(76, 174, 178, 0.4);
+}
+
+.menu{
+    border-bottom: 4px solid #2F4F4F;
+}
+
 h1{
     margin: 0px;
-    padding: 5px;
+    margin-top: 8px;
+    margin-left: 8px;
     float: left;
+    width: 25%;
 }
-ul{
-    padding-left: 300px;
-}
+
 ul,li{
     display: inline-block;
     list-style-type: none;
 }
+ul{
+    width: 70%;
+    margin: 0;
+    text-align: right;
+}
 li{
-    padding-right: 30px;
+    padding: 20px 30px;
     text-transform: uppercase;
+}
+
+.menu li:hover{
+    background-color: #4CAEB2;
+    color: #FFF;
 }
 
 .carrousel-img img{
@@ -37,16 +56,36 @@ li{
     height: 700px;
 }
 
+
 h2{
+    margin: 10px 0;
+    padding: 20px 0;
     text-align: center;
+    background-color:#C0C0C0;
+    border: 1px solid #808080;
+    border-radius: 5px;
 }
 
-.presentation{
-    margin-left: 200px;
-    margin-right: 200px;
+.presentation-texte{
+    float: left;
+    width: 40%;
+    padding: 10px;
 }
 
-.presentation-photo img{
-    width: 100%;
-    margin-top: 50px;
+.presentation-photo{
+    text-align: center;
+    width: 50%;
+    float: right;
+}
+
+.clear{
+    clear: both;
+}
+
+.centre_site{
+    box-shadow:0px 0px 10px black;
+}
+.centre_site img{
+    box-shadow:0px 0px 10px black;
+    border-radius: 10px;
 }
