--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ ul{
 li{
     padding: 20px 30px;
     text-transform: uppercase;
+    font-weight: bold
 }
 
 .menu li:hover{
@@ -67,15 +68,20 @@ h2{
 }
 
 .presentation-texte{
-    float: left;
-    width: 40%;
-    padding: 10px;
+    display: inline-block;
+    margin-left: 2%;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 30px;
+    max-width: 45%;
 }
 
 .presentation-photo{
-    text-align: center;
-    width: 50%;
     float: right;
+}
+
+.presentation-photo img{
+    width:500px;
 }
 
 .clear{
@@ -85,7 +91,12 @@ h2{
 .centre_site{
     box-shadow:0px 0px 10px black;
 }
+
 .centre_site img{
     box-shadow:0px 0px 10px black;
-    border-radius: 10px;
+}
+
+#breve{
+    text-align: center;
+    font-style: italic;
 }
