--- a/style.css
+++ b/style.css
@@ -31,16 +31,16 @@ h1{
     width: 25%;
 }
 
-ul,li{
+.menu ul,li{
     display: inline-block;
     list-style-type: none;
 }
-ul{
+.menu ul{
     width: 70%;
     margin: 0;
     text-align: right;
 }
-li{
+.menu li{
     padding: 20px 30px;
     text-transform: uppercase;
     font-weight: bold
@@ -54,7 +54,7 @@ li{
 .carrousel-img img{
     width: 100%;
     max-width: 100%;
-    height: 700px;
+    height: 800px;
 }
 
 
@@ -70,9 +70,9 @@ h2{
 .presentation-texte{
     display: inline-block;
     margin-left: 2%;
+    margin-top: 30px;
     padding-left: 10px;
     padding-right: 10px;
-    margin-top: 30px;
     max-width: 45%;
 }
 
