--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
+/*suppression des marges par défaut*/
 html,body{
-    height: 100%;
+    height: 100%;      
     margin: 0;
     padding: 0;
 }
@@ -7,34 +8,85 @@ html,body{
 body{
     min-height: 100%;
     margin: 0 auto;
-    background-color: #DCDCDC;
+    background-color:rgba(220,220,220,0.5);
 }
+/*---------------------------------*/
 
-.centre_site{
+/*Mise en forme du corps du site*/
+.centre_site, .contact{
     padding: 10px 20px;
     margin: 30px 150px;
+    background-color: rgb(220,220,220);
 }
 
-.menu,.presentation-texte,.presentation-entrainement, .mouvement{
+.centre_site,.contact{
+    box-shadow:0px 0px 10px black;
+}
+
+.centre_site img{
+    box-shadow:0px 0px 10px black;
+}
+
+.menu,.presentation-texte,.presentation-entrainement, .mouvement, .recherche{
     background-color: rgba(76, 174, 178, 0.4);
 }
 
+/*------------------------------*/
+
+/*Mise en forme recherche*/
+.container-recherche{
+    width: 100%;
+}
+.recherche{
+    width: 35%;
+    text-align: center;
+    padding: 5px 0px;
+    float: right;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    margin-right: 2%;
+}
+
+.clear{
+    clear: both;
+}
+/*-----------------------*/
+
+/*Mise en forme avant menu*/
+.top-menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.top-menu h1{
+    margin: 10px 0 10px 5%;
+    height: auto;
+}
+
+.top-menu ul{
+    margin: 0;
+    padding: 0;
+    list-style: none; 
+    display: flex; 
+    margin-right: 2%; 
+}
+/*------------------------*/
+
+/*Mise en forme du menu*/
 .menu{
-    border-bottom: 4px solid #2F4F4F;
+    border-bottom: 3px solid #2F4F4F;
+    border-top: 3px solid #2F4F4F;
     display: flex;
     justify-content: space-between;
 }
 
-h1{
-    margin-top: 10px;
-    margin-left: 15px;
-    margin-bottom: 0px;
-
-}
-
 .menu ul{
     margin: 0;
+    padding: 0;
     display: flex;
+    width: 100%;
+    justify-content: center;
 }
 .menu li{
     padding: 20px 30px;
@@ -46,13 +98,17 @@ h1{
     background-color: #4CAEB2;
     color: #FFF;
 }
+/*---------------------*/
 
+/*Mise en forme du carrousel d'image*/
 .carrousel-img img{
     width: 100%;
     max-width: 100%;
     height: 800px;
 }
+/*---------------------------------*/
 
+/*Mise en forme des titres*/
 h2{
     margin: 10px 0;
     padding: 20px 0;
@@ -61,14 +117,14 @@ h2{
     border: 1px solid #808080;
     border-radius: 5px;
 }
+/*--------------------------------*/
 
+/*Mise en forme de la presentation*/
 .container-presentation{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-
 .presentation-photo img{
     width: 500px;
     height:350px;
@@ -82,24 +138,25 @@ h2{
 .presentation-texte li{
     list-style-type: square;
 }
+/*------------------------------*/
 
-.centre_site{
-    box-shadow:0px 0px 10px black;
-}
-
-.centre_site img{
-    box-shadow:0px 0px 10px black;
-
-}
-
+/*Mise en forme des exercices*/
 #breve{
     text-align: center;
     font-style: italic;
 }
 
-h3{
+.powerlifting h3{
+    width: 95%;
     padding:10px 10px;
+    margin: 3% auto;
     text-align: center;
+    background-color: #4CAEB2;
+    border-bottom: 2px solid #2F4F4F;
+    border-left: 2px solid #2F4F4F;
+    border-right: 2px solid #2F4F4F;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .mouvement{
@@ -109,6 +166,7 @@ h3{
 .container-mouvement{
     display: flex;
     align-items: center;
+    justify-content: space-around;
 }
 
 .image-mouvement{
@@ -119,6 +177,63 @@ h3{
     width: 60px;
 }
 .texte-mouvement{
-    width: 400px;
+    width: 35%;
+    padding: 15px 15px;
+    margin-right: 1%;
     text-align: justify;
+    background-color: #A9A9A9;
 }
+/*-------------------------*/
+
+/*Mise en forme du formulaire de contact*/
+
+.container-contact{
+    margin-bottom: 2%;
+}
+
+.mail{
+    text-align: center;
+}
+
+.contact form{
+    background-color:#C0C0C0;
+    padding: 10px;
+    width:50%;
+    margin: 0 auto;
+}
+
+fieldset {
+    padding:0 20px 20px 20px;
+    margin-bottom:10px;
+    border:2px solid #2F4F4F;
+
+}
+
+legend {
+    color:#2F4F4F;
+    font-weight:bold
+}
+
+.contact label{
+    display: block;
+    margin-top: 10px;
+}
+
+.contact input, .contact textarea {
+    padding:3px;
+    background-color:#FFF3F3;
+    border:1px solid #2F4F4F;
+    border-radius:5px;
+    width:50%;
+    box-shadow:1px 1px 2px #C0C0C0 inset;
+}
+
+.contact input[type=submit]{
+    box-shadow:1px 1px 1px #2F4F4F;
+}
+
+.contact p{
+    text-align: center;
+    margin-bottom: 2%
+}
+/*--------------------------------------*/
